force-app/main/default/objects/LPCR_DetailModificationPlanning__c/LPCR_DetailModificationPlanning__c.object-meta.xml
<CustomObject>
    <label>Détail Modification Planning</label>
    <nameField>
        <displayFormat>DMP-{0000}</displayFormat>
        <label>Numéro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Détail Modification Plannings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>