force-app/main/default/objects/LPCR_DetailModificationPlanning__c/fields/LPCR_IdExterne__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IdExterne__c</fullName>
    <externalId>true</externalId>
    <label>Id Externe</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>