force-app/main/default/objects/LPCR_DetailModificationPlanning__c/fields/LPCR_IdExterne_Contrat__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IdExterne_Contrat__c</fullName>
    <label>Id Externe Contrat</label>
    <length>50</length>
    <type>Text</type>
</CustomField>