force-app/main/default/objects/LPCR_DetailModificationPlanning__c/fields/LPCR_IdExterne_ModificationEntrante__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IdExterne_ModificationEntrante__c</fullName>
    <label>Id Externe Modif Entrante</label>
    <length>50</length>
    <type>Text</type>
</CustomField>