force-app/main/default/objects/LPCR_DetailModificationPlanning__c/fields/LPCR_ModificationEntrante__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ModificationEntrante__c</fullName>
    <label>Modification Entrante</label>
    <referenceTo>LPCR_ModificationEntrante__c</referenceTo>
    <relationshipLabel>Détail Modification Plannings</relationshipLabel>
    <relationshipName>D_tail_Modification_Plannings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>